--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,19 +1,6 @@
 .footer {
     background:#2F303A;
     padding: 60px 0;
-    
-    .footer__logo {
-        font-family: 'Raleway';
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 30.52px;
-        text-transform: capitalize;
-        text-decoration: none;
-        margin: 0;
-        color:var(--color-white);
-        .footer__logo-color {
-            color:var(--color-hover);
-        }
     }
     .footer__contact {
         display: block;
@@ -38,6 +25,9 @@
         background-color: #44454e;
         border-radius:50%;
         margin-right: 10px;
+        &:nth-child(4) {
+            margin-right: 0;
+        }
     }
     .footer__social-link {
         display: block;
@@ -53,7 +43,21 @@
         fill: var(--color-white);
         display: block; 
     }
- } 
+ 
+
+.footer__logo {
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30.52px;
+    text-transform: capitalize;
+    text-decoration: none;
+    margin: 0;
+    color:var(--color-white);
+    .footer__logo-color {
+        color:var(--color-hover);
+    }
+}
  .footer__title {
     color: var(--color-white);
     letter-spacing: 1px;
@@ -82,8 +86,9 @@
 }
 
 .input-style {
-    width: 290px;
+    width: 100%;
     height: 50px;
+    margin-bottom: 20px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius:4px;
     background:transparent;
@@ -93,11 +98,15 @@
     }
 }
 
+.footer__form {
+    width: 100%;
+}
+
 .footer__form-button {
-    padding: 10px 29px;
+    padding: 13px 34px;
     align-items: center;
     display: flex;
-    margin: 20px auto;
+    margin:0 auto;
     background:var(--color-hover);
     color:var(--color-white);
     font-size: 16px;
@@ -118,12 +127,6 @@
     fill: var(--color-white);
 }
 
-@media screen and (min-width:480px) {
-    .input-style {
-        width: 358px;
-    }
-}
-
 @media screen and (min-width:768px) {
     .footer__row {
         flex-direction: row;
@@ -131,11 +134,19 @@
         justify-content: space-around;
         align-items: baseline;
     }
+    .footer__form {
+        width: 450px;
+    }
 }
+    
+
 @media screen and (min-width:1200px) {
+    .footer__row {
+        justify-content: flex-start
+    }
     .footer__logo {
         margin-right: 93px;
-        font-size: 26;
+        font-size: 26px;
     }
     .footer__social {
         margin-left: 66px;
@@ -154,6 +165,7 @@
     
     .footer__form-block {
         display: flex;
+        align-items: baseline;
     }
     .footer__form {
         margin-left:93px;
@@ -163,5 +175,8 @@
     }
     .footer__title {
         text-align: left;
+    }
+    .input-style {
+        width: 358px;
     }
 }
