--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,11 @@ form {
   fill: var(--color-hover);
 }
 
+.menu-open {
+  position: absolute;
+  right: 30px;
+}
+
 .menu-close {
   position: absolute;
   right: 15px;
@@ -1347,6 +1352,71 @@ form {
   fill: var(--color-white);
 }
 
+/*mobile-nav*/
+.mobile-nav {
+  position: absolute;
+  background-color: #fff;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.mobile-nav .container {
+  position: relative;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+}
+
+.mobile-nav .menu-close {
+  position: absolute;
+  right: 30px;
+  top: 21px;
+}
+
+.mobile-menu__item {
+  margin-bottom: 36px;
+}
+
+.mobile-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.mobile-contacts__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+
+.mobile-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mobile-nav.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
 @media screen and (min-width: 768px) {
   .footer__row {
     -webkit-box-orient: horizontal;
@@ -1460,7 +1530,7 @@ form {
 }
 
 .portfolio__item {
-  /*margin: 30px 0 0 30px;*/
+  margin-bottom: 30px;
 }
 
 .portfolio__item .portfolio__hidden {
@@ -1564,8 +1634,8 @@ form {
     margin-bottom: 50px;
   }
   .portfolio__item {
-    -ms-flex-preferred-size: calc((100% - 30px) / 3);
-        flex-basis: calc((100% - 30px) / 3);
+    -ms-flex-preferred-size: calc((100% - 60px) / 3);
+        flex-basis: calc((100% - 60px) / 3);
   }
 }
 /*# sourceMappingURL=main.css.map */
