--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -34,7 +34,7 @@
 }
 
 .portfolio__item {
-    /*margin: 30px 0 0 30px;*/
+    margin-bottom: 30px;
     .portfolio__hidden {
         overflow: hidden;
     }
@@ -125,7 +125,7 @@
         margin-bottom: 50px; 
     }
     .portfolio__item {
-       flex-basis: calc((100% - 30px) / 3);
+       flex-basis: calc((100% - 60px) / 3);
         
     }
 }
