--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -93,14 +93,17 @@
 
 .menu-open {
     position: absolute;
-    right: 30px;
+    right: 10px;
+    top:21px;
+    background:transparent;
+    fill:var(--color-text);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+        fill:var(--color-hover);
+    }
 }
  
-.menu-close {
-    position: absolute;
-    right: 15px;
-    top: 21px;
-}
+
 
 .container__menu {
     display: flex;
@@ -111,13 +114,28 @@
 }
 
 .mobile-nav {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
     padding:40px;
     background: #ffffff;
     z-index: 10;
+    .menu-close {
+        position: absolute;
+        right: 10px;
+        top: 21px;
+        background:transparent;
+        fill:var(--color-text);
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover, &:focus {
+            fill:var(--color-hover);
+        }
+    }
+}
+.mobile-nav__bottom {
+    position: absolute;
+    bottom:48px;
 }
 
 .mobile-menu__item {
@@ -148,8 +166,15 @@
     }
 }
 
+.mobile-contacts__link-email {
+    color:var(--color-silver);
+}
+
 .mobile-contacts__item {
     margin-bottom: 32px;
+    &:nth-child(2) {
+        margin-bottom: 64px;
+    }
 }
 
 .mobile-media{
@@ -157,20 +182,26 @@
 }
 .mobile-media__link {
     margin-right: 20px;
+    font-size: 18px;
     text-decoration: none;
     text-transform: none;
     color:var(--color-hover);
     &:nth-child(4) {
         margin: 0;
     }
-    &::before {
-        content:'';
-        position: absolute;
-        width: 1px;
-        height: 18px;
-        margin-left: -10px;
-        background:var(--color-silver);
-    }
+}
+
+.link::before {
+    content:'';
+    position: absolute;
+    width: 1px;
+    height: 18px;
+    margin-left: -10px;
+    background:var(--color-silver);
+}
+
+.mobile-menu__link.current {
+    color: var(--color-hover);
 }
 
 .mobile-nav.is-hidden {
